--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -12,15 +12,17 @@
         <LinearLayout android:id="@+id/addressContainer" android:layout_width="match_parent"
             android:layout_height="wrap_content" android:orientation="vertical"
             android:gravity="center">
+
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/city"
                 android:layout_width="247dp"
                 android:layout_height="51dp"
-                android:layout_marginBottom="50dp"
                 android:layout_marginTop="16dp"
+                android:layout_marginBottom="50dp"
                 android:hint="@string/placeHolder"
                 android:imeOptions="actionDone"
                 android:inputType="text"
+                android:textAlignment="center"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
